@@ -58,15 +58,13 @@ include $(BUILD_BASE)/generated_lists
 
 TOUCH_FILES = mkinstalldirs install-sh missing
 
-LT_TARGETS = ltconfig ltmain.sh config.guess config.sub
-
 config_h_in = include/ap_config_auto.h.in
 apr_configure = srclib/apr/configure
 mm_configure = srclib/apr/shmem/unix/mm/configure
 pcre_configure = srclib/pcre/configure
 aprutil_configure = srclib/apr-util/configure
 
-APACHE_TARGETS = $(TOUCH_FILES) $(LT_TARGETS) configure $(config_h_in)
+APACHE_TARGETS = $(TOUCH_FILES) configure $(config_h_in)
 
 APR_TARGETS = $(apr_configure) $(mm_configure) $(aprutil_configure)
 
@@ -88,9 +86,6 @@ aclocal.m4: acinclude.m4 $(libtool_m4)
 	@echo "dnl THIS FILE IS AUTOMATICALLY GENERATED BY buildconf" >$@
 	@echo "dnl edits here will be lost" >>$@
 	@cat acinclude.m4 $(libtool_m4) >> $@
-
-$(LT_TARGETS):
-	libtoolize $(AMFLAGS) --force
 
 $(config_h_in): configure
 # explicitly remove target since autoheader does not seem to work 
