@@ -188,7 +188,7 @@ clean-x:
 	rm -rf .libs
 
 distclean: distclean-recursive clean-x
-	rm -f config.cache config.log config.status config_vars.mk libtool \
+	rm -f config.cache config.log config.status config_vars.mk \
 	stamp-h Makefile shlibtool .deps $(DISTCLEAN_TARGETS)
 
 include $(builddir)/.deps
